--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -75,6 +75,7 @@
                         color: $color-white;
                     }
                     .basket-counter {
+                        display: block;
                         position: absolute;
                         width: 19px;
                         height: 19px;
