--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 @import "generate";
 @import "reset";
 @import "header";
+@import "header-bottom";
 @import "banner";
 @import "category";
 @import "card-box";
