--- a/css/style.css
+++ b/css/style.css
@@ -686,26 +686,29 @@ ul li {
       flex-wrap: wrap;
 }
 
-.card-box-container-for-card .card {
+.card-box-container-for-card-item {
+  margin: 15px;
+}
+
+.card-box-container-for-card-item .card {
   display: block;
   width: 360px;
   min-height: 580px;
-  margin: 15px;
   background: #f8f8f8;
   position: relative;
 }
 
-.card-box-container-for-card .card-view {
+.card-box-container-for-card-item .card-view {
   width: 100%;
   height: 100%;
   display: block;
 }
 
-.card-box-container-for-card .card-img-container {
+.card-box-container-for-card-item .card-img-container {
   position: relative;
 }
 
-.card-box-container-for-card .card-img-container::before {
+.card-box-container-for-card-item .card-img-container::before {
   content: "";
   display: none;
   width: 100%;
@@ -714,15 +717,15 @@ ul li {
   background: rgba(58, 56, 56, 0.86);
 }
 
-.card-box-container-for-card .card-img {
+.card-box-container-for-card-item .card-img {
   max-width: 100%;
 }
 
-.card-box-container-for-card .card-content {
+.card-box-container-for-card-item .card-content {
   margin: 25px 28px 20px 16px;
 }
 
-.card-box-container-for-card .card-content-title {
+.card-box-container-for-card-item .card-content-title {
   font-weight: normal;
   font-size: 13px;
   line-height: 16px;
@@ -730,7 +733,7 @@ ul li {
   text-transform: uppercase;
 }
 
-.card-box-container-for-card .card-content-description {
+.card-box-container-for-card-item .card-content-description {
   margin: 13px 0 18px 0;
   font-weight: 300;
   font-size: 14px;
@@ -738,12 +741,12 @@ ul li {
   color: #5d5d5d;
 }
 
-.card-box-container-for-card .card-content .price {
+.card-box-container-for-card-item .card-content .price {
   font-weight: normal;
   font-size: 16px;
 }
 
-.card-box-container-for-card .card-add-button {
+.card-box-container-for-card-item .card-add-button {
   display: none;
   border: 1px solid white;
   padding: 13px;
@@ -764,21 +767,21 @@ ul li {
   transition: 0.3s;
 }
 
-.card-box-container-for-card .card-add-button svg {
+.card-box-container-for-card-item .card-add-button svg {
   fill: #ffffff;
 }
 
-.card-box-container-for-card .card-add-button:hover {
+.card-box-container-for-card-item .card-add-button:hover {
   background: rgba(255, 255, 255, 0.8);
   color: #000000;
   border: none;
 }
 
-.card-box-container-for-card .card-add-button:hover svg {
+.card-box-container-for-card-item .card-add-button:hover svg {
   fill: black;
 }
 
-.card-box-container-for-card .card:hover .card-add-button {
+.card-box-container-for-card-item .card:hover .card-add-button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -790,7 +793,7 @@ ul li {
           align-items: center;
 }
 
-.card-box-container-for-card .card:hover .card-img-container::before {
+.card-box-container-for-card-item .card:hover .card-img-container::before {
   display: block;
 }
 
