--- a/scss/_card-box.scss
+++ b/scss/_card-box.scss
@@ -19,89 +19,91 @@
         margin: 33px -15px;
         @include flex(space-between, flex-start);
         flex-wrap: wrap;
-        .card {
-            display: block;
-            width: 360px;
-            min-height: 580px;
+        &-item {
             margin: 15px;
-            background: $color-card;
-            position: relative;
-            &-view {
-                width: 100%;
-                height: 100%;
+            .card {
                 display: block;
-            }
-            &-img-container {
+                width: 360px;
+                min-height: 580px;
+                background: $color-card;
                 position: relative;
-            }
-            &-img-container::before {
-                content: "";
-                display: none;
-                width: 100%;
-                height: 100%;
-                position: absolute;
-                background: rgba(58, 56, 56, 0.86);
-            }
-            &-img {
-                max-width: 100%;
-            }
-            &-content {
-                margin: 25px 28px 20px 16px;
-                &-title {
-                    font-weight: normal;
-                    font-size: 13px;
-                    line-height: 16px;
-                    color: $color-text-black;
-                    text-transform: uppercase;
+                &-view {
+                    width: 100%;
+                    height: 100%;
+                    display: block;
                 }
-                &-description {
-                    margin: 13px 0 18px 0;
-                    font-weight: 300;
+                &-img-container {
+                    position: relative;
+                }
+                &-img-container::before {
+                    content: "";
+                    display: none;
+                    width: 100%;
+                    height: 100%;
+                    position: absolute;
+                    background: rgba(58, 56, 56, 0.86);
+                }
+                &-img {
+                    max-width: 100%;
+                }
+                &-content {
+                    margin: 25px 28px 20px 16px;
+                    &-title {
+                        font-weight: normal;
+                        font-size: 13px;
+                        line-height: 16px;
+                        color: $color-text-black;
+                        text-transform: uppercase;
+                    }
+                    &-description {
+                        margin: 13px 0 18px 0;
+                        font-weight: 300;
+                        font-size: 14px;
+                        line-height: 17px;
+                        color: #5d5d5d;
+                    }
+                    .price {
+                        font-weight: normal;
+                        font-size: 16px;
+                    }
+                }
+                &-add-button {
+                    display: none;
+                    border: 1px solid white;
+                    padding: 13px;
+                    background: transparent;
+                    width: 139px;
+                    height: 44px;
+                    position: absolute;
+                    top: 188px;
+                    left: 111px;
+                    right: 188px;
+                    bottom: 111px;
+                    font-weight: normal;
                     font-size: 14px;
                     line-height: 17px;
-                    color: #5d5d5d;
+                    color: $color-white;
+                    cursor: pointer;
+                    transition: 0.3s;
+                    svg {
+                        fill: $color-white;
+                    }
                 }
-                .price {
-                    font-weight: normal;
-                    font-size: 16px;
+                &-add-button:hover {
+                    background: rgba($color: white, $alpha: 0.8);
+                    color: $color-text-black;
+                    border: none;
+                    svg {
+                        fill: black;
+                    }
                 }
-            }
-            &-add-button {
-                display: none;
-                border: 1px solid white;
-                padding: 13px;
-                background: transparent;
-                width: 139px;
-                height: 44px;
-                position: absolute;
-                top: 188px;
-                left: 111px;
-                right: 188px;
-                bottom: 111px;
-                font-weight: normal;
-                font-size: 14px;
-                line-height: 17px;
-                color: $color-white;
-                cursor: pointer;
-                transition: 0.3s;
-                svg {
-                    fill: $color-white;
+                &:hover .card-add-button {
+                    @include flex(space-between, center);
                 }
             }
-            &-add-button:hover {
-                background: rgba($color: white, $alpha: 0.8);
-                color: $color-text-black;
-                border: none;
-                svg {
-                    fill: black;
-                }
+            .card:hover .card-img-container::before {
+                display: block;
             }
-            &:hover .card-add-button {
-                @include flex(space-between, center);
-            }
-        }
-        .card:hover .card-img-container::before {
-            display: block;
         }
     }
     &-button {
