--- a/scss/_header-bottom.scss
+++ b/scss/_header-bottom.scss
@@ -4,7 +4,8 @@
     min-height: 148px;
     &-container {
         @include flex(space-between, center);
-        padding: 60px 0;
+        padding-top: 60px;
+        padding-bottom: 60px;
         &-title {
             font-weight: normal;
             font-size: 24px;
