--- a/css/style.css
+++ b/css/style.css
@@ -469,7 +469,8 @@ ul li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 60px 0;
+        padding-top: 60px;
+        padding-bottom: 60px;
 }
 
 .header-bottom-container-title {
